tests/fixtures/invalid/forbidden_loop_stmt.sr
rule "EQ: Loop" in underlying:
    when true:
        for i in range(10):
            then emit_signal(kind="BUY")

